# erado

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  LICENSE  README.md  make_stub_file.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/actions/init/: action.yaml
.github/workflows/: build.yaml  code-style.yaml  deploy.yaml  docs.yaml  python-matrix.json
docs/: CONTRIBUTING.md  README.md  conf.py  getting-started.rst  index.rst  version.py
docs/_templates/: versioning.html
docs/util/: core.py  index.html  index.html.jinja  redirect.py  version.py
examples/: models_and_frontend.py  qft.py
src/: make_stubs.py
src/erado/: __init__.py  circuits.py  examples.py  fidelity.py  frontend.py  models.py  qft.py  util.py
src/erado/models/: __init__.py  _circuit_sampler.py  _core.py  _pass.py  circuit_sampler.py  core.py  transpiler_pass.py
tests/: conftest.py  test_CircuitState.py  test_circuits.py  test_frontend.py
typings/qiskit/_accelerate/: circuit.pyi
