[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "erado"
description = "Simulation suite for error mitigation via dimon erasure models."
authors = [
    { name = "Sam Griffiths", email = "sgriffiths@oqc.tech" }
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "qiskit (>=2.2.1,<3.0.0)",
    "qiskit-aer-gpu-cu11 (>=0.17.2,<0.18.0) ; sys_platform == 'linux'",
    "qiskit-aer (>=0.17.2,<0.18.0) ; sys_platform != 'linux'",
]

[dependency-groups]
dev = [
    "poethepoet (>=0.37.0,<0.38.0)",
    "pyright[nodejs] (>=1.1.406,<2.0.0)"
]


[tool.poetry]
packages = [{ include = "erado", from = "src" }]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"


[tool.poe.tasks]
types = "pyright ."


[tool.pyright]
typeCheckingMode = "standard"
